# django-htmx-test

./: README.md  pyproject.toml
mysite/: manage.py
mysite/mysite/: settings.py  urls.py
mysite/polls/: admin.py  models.py  tests.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/search/: urls.py  views.py
mysite/search/templates/search/: index.html
